# PEScope

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  create_plugins.py  new
Headers/: Utils.h  header.h  pe_parser.h  pe_structs.h  version.h
cmake/: version.cmake
cmake/plugins/: plugin1.cmake  plugin2.cmake
conf/: version.h.in  version.rc.in
conf/plugins/: plugin1.h.in  plugin2.h.in
headers/: header.h  pe_parser.h  pe_structs.h  plugin_manager.h  utils.h
headers/plugins_include/: plugin2.h  plugins.h
src/: Utils.cpp  main.cpp  pe_parser.cpp  plugin_manager.cpp  utils.cpp
src/plugins_src/plugin1/: CMakeLists.txt  plugin1.cpp
src/plugins_src/plugin2/: CMakeLists.txt  plugin2.cpp
